--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             
             <img class="web" src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExOWN0bnFva2t1ZWEzNHgwdTBudWR2cDB3NHlhejlmNm1oaXEyZjZuYSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/L8K62iTDkzGX6/giphy.webp" alt=" web devloper">
             <h3>--design and devlopement--</h3>
-            <p>My web development journey started with a curiosity about websites, leading me to learn HTML, CSS, and JavaScript. With each project, my skills grew, turning my passion into a career where I now create dynamic, user-friendly websites.</p>
+            <p>My Web Development journey started with a curiosity about websites, leading me to learn HTML, CSS, and JavaScript. With each project, my skills grew, turning my passion into a career where I now create dynamic, user-friendly websites.</p>
           </div>
           <div class="skill-row">
             
