--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       
       
       <div class="bottom-container">
-        <a class="footer-link" href="https://www.linkedin.com/in/danish-khan-422889258">LinkedIn</a>
+        <a class="footer-link" href="https://linkedin.com/in/danish-khan-422889258">LinkedIn</a>
         <a class="footer-link" href="https://twitter.com/@Danish_khan_23">Twitter</a>
         <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
         <p class="copyright">© 2018 Danish Khan @web devloper</p>
